--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -87,7 +87,7 @@
   {
     height: calc(~"100% - "@results-toolbar-height);
     overflow: auto;
-    padding-bottom: 10em;
+    padding-bottom: 14em;
   }
   .gn-searchform
   {
@@ -845,6 +845,10 @@ ul.gn-resultview {
       .btn-group, button {
         width: 46px;
         margin: 0 3px 0 0;
+      }
+      .dropdown-menu {
+        max-height: 14em;
+        overflow-y: auto;
       }
     }
     .gn-md-relations {
